Add notice about integration in Neos CMS
Neos (neos.io) is the most advanced PHP based enterprise grade CMS and the integration of Elasticsearch is used heavily to serve sites with many millions of nodes.
The integration uses the Doctrine ORM lifecycle to keep the data up-to-date and the projection layer of Neos contains a custom domain-specific-language for querying elasticsearch.

--- a/docs/plugins/integrations.asciidoc
+++ b/docs/plugins/integrations.asciidoc
@@ -16,6 +16,9 @@ Integrations are not plugins, but are external tools or modules that make it eas
 
 * https://drupal.org/project/elasticsearch_connector[Drupal]:
   Drupal Elasticsearch integration.
+  
+* https://github.com/Flowpack/Flowpack.ElasticSearch.ContentRepositoryAdaptor[Neos]:
+  Neos CMS Elasticsearch integration with custom projection DSL.
 
 * http://searchbox-io.github.com/wp-elasticsearch/[Wp-Elasticsearch]:
   Elasticsearch WordPress Plugin
